[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ezblock"
version = "0.0.1"
authors = [
  { name="Benjamin Anderson", email="andersonbcdefg@gmail.com" },
]
description = "A simple CLI tool to block and unblock websites by modifying /etc/hosts"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache 2.0 License",
    "Operating System :: POSIX :: Linux",
]

dependencies = ["fire"]

[project.scripts]
ezblock = "ezblock.main:main"

[tool.setuptools]
packages = {find = {where = ["src"]}}